manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: "1234"
    git/branch: refs/heads/feature-branch-1
    janitor/ttl: 7d
  labels:
    cert: wildcard
  name: sample-next-app-feature-branch-1
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
    kapp.k14s.io/disable-default-ownership-label-rules: ""
  labels:
    application: sample-next-app
    component: app
  name: app
  namespace: sample-next-app-feature-branch-1
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    component: app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
    kapp.k14s.io/disable-default-ownership-label-rules: ""
  labels:
    application: sample-next-app
    component: hasura
  name: hasura
  namespace: sample-next-app-feature-branch-1
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    component: hasura
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
    kapp.k14s.io/disable-default-ownership-label-rules: ""
  labels:
    application: sample-next-app
    component: pgweb
  name: pgweb
  namespace: sample-next-app-feature-branch-1
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    component: pgweb
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
    kapp.k14s.io/disable-default-ownership-label-rules: ""
  labels:
    application: sample-next-app
    component: app
  name: app
  namespace: sample-next-app-feature-branch-1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        application: sample-next-app
        component: app
    spec:
      containers:
      - env: []
        image: ghcr.io/socialgouv/sample-next-app/app:sha-ffac537e6cbbf934b08745a378932722df287a53
        livenessProbe:
          failureThreshold: 15
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
        name: app
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          failureThreshold: 15
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 0
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 5
      initContainers: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
    kapp.k14s.io/disable-default-ownership-label-rules: ""
  labels:
    application: sample-next-app
    component: hasura
  name: hasura
  namespace: sample-next-app-feature-branch-1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hasura
  template:
    metadata:
      labels:
        application: sample-next-app
        component: hasura
    spec:
      containers:
      - env: []
        image: ghcr.io/socialgouv/sample-next-app/hasura:sha-ffac537e6cbbf934b08745a378932722df287a53
        livenessProbe:
          failureThreshold: 15
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
        name: hasura
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          failureThreshold: 15
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 1280Mi
          requests:
            cpu: 50m
            memory: 128Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 5
      initContainers: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
    kapp.k14s.io/disable-default-ownership-label-rules: ""
  labels:
    application: sample-next-app
    component: pgweb
  name: pgweb
  namespace: sample-next-app-feature-branch-1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pgweb
  template:
    metadata:
      labels:
        application: sample-next-app
        component: pgweb
    spec:
      containers:
      - image: sosedoff/pgweb:0.11.8
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
        name: pgweb
        ports:
        - containerPort: 8081
          name: http
        readinessProbe:
          failureThreshold: 15
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 0
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: /
            port: http
          periodSeconds: 5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    application: sample-next-app
    component: app
  name: app
  namespace: sample-next-app-feature-branch-1
spec:
  rules:
  - host: sample-next-app-feature-branch-1.fabrique.social.gouv.fr
    http:
      paths:
      - backend:
          service:
            name: app
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sample-next-app-feature-branch-1.fabrique.social.gouv.fr
    secretName: wildcard-crt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    application: sample-next-app
    component: hasura
  name: hasura
  namespace: sample-next-app-feature-branch-1
spec:
  rules:
  - host: hasura-sample-next-app-feature-branch-1.fabrique.social.gouv.fr
    http:
      paths:
      - backend:
          service:
            name: hasura
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hasura-sample-next-app-feature-branch-1.fabrique.social.gouv.fr
    secretName: wildcard-crt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    application: sample-next-app
    component: pgweb
  name: pgweb
  namespace: sample-next-app-feature-branch-1
spec:
  rules:
  - host: pgweb-sample-next-app-feature-branch-1.fabrique.social.gouv.fr
    http:
      paths:
      - backend:
          service:
            name: pgweb
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pgweb-sample-next-app-feature-branch-1.fabrique.social.gouv.fr
    secretName: wildcard-crt
